# ChangeLog for media-video/mpv
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*mpv-0_p20121201 (01 Dec 2012)

  01 Dec 2012; Nikoli <nikoli@lavabit.com> +mpv-0_p20121201.ebuild,
  mpv-9999.ebuild:
  add snapshot, update openal dep

*mpv-9999 (14 Nov 2012)

  14 Nov 2012; Nikoli <nikoli@lavabit.com> +mpv-9999.ebuild, +metadata.xml:
  Initial ebuild. If it fails to build, use "pu" git branch.
